--- a/.env.docker.example
+++ b/.env.docker.example
@@ -8,6 +8,12 @@ METABASE_JWT_SHARED_SECRET="ffffffffffffffffffffffffffffffffffffffffffffffffffff
 METABASE_ADMIN_EMAIL: "admin@example.com"
 METABASE_ADMIN_PASSWORD="foobarbaz"
 
+METABASE_APP_DB_HOST: "shoppy_app_db"
+METABASE_APP_DB_PORT: "5432"
+METABASE_APP_DB: "shoppy_app"
+METABASE_APP_DB_USER: "shoppy_app"
+METABASE_APP_DB_PASSWORD: "foobarbaz"
+
 SHOPPY_DB_HOST="shoppy_db"
 SHOPPY_DB_PORT="5432"
 SHOPPY_DB="shoppy"
