Add missing env variable

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,6 +58,7 @@ services:
       MB_SETUP_TOKEN: "${PREMIUM_EMBEDDING_TOKEN}"
       METABASE_ADMIN_EMAIL: "${METABASE_ADMIN_EMAIL}"
       METABASE_ADMIN_PASSWORD: "${METABASE_ADMIN_PASSWORD}"
+      SHOPPY_DB_HOST: "${SHOPPY_DB_HOST}"
       SHOPPY_DB_PORT: "${SHOPPY_DB_PORT}"
       SHOPPY_DB: "${SHOPPY_DB}"
       SHOPPY_DB_USER: "${SHOPPY_DB_USER}"
