--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ on:
     types:
       - completed
     branches:
-      - "release"
+      - "main"
 
 env:
   version: ${{ github.event.inputs.version || vars.MB_VERSION }}
@@ -25,8 +25,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          ref: "release"
       - name: Tailscale
         uses: tailscale/github-action@v2
         with:
