--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -105,11 +105,17 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+        VITE_APP_METABASE_INSTANCE_URL: "http://localhost:${MB_PORT}"
+        VITE_APP_API_HOST: "http://localhost:${API_PORT}/api"
+        VITE_APP_AUTH_PROVIDER_URI: "/sso/metabase"
+        WATCH: '${WATCH}'
     environment:
       CLIENT_PORT: "${CLIENT_PORT}"
       VITE_APP_METABASE_INSTANCE_URL: "http://localhost:${MB_PORT}"
       VITE_APP_API_HOST: "http://localhost:${API_PORT}/api"
       VITE_APP_AUTH_PROVIDER_URI: "/sso/metabase"
+      WATCH: '${WATCH}'
     ports:
       - "${CLIENT_PORT}:${CLIENT_PORT}"
     volumes:
