--- a/e2e/package.json
+++ b/e2e/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "@testing-library/cypress": "^10.0.3",
     "cypress": "^14.0.3",
+    "cypress-terminal-report": "^7.2.1",
     "env-cmd": "^10.1.0"
   },
   "scripts": {
