Update SDK to 0.57.0-alpha.0

--- a/metabase/Dockerfile
+++ b/metabase/Dockerfile
@@ -1,4 +1,4 @@
-FROM metabase/metabase-enterprise:v1.55.x
+FROM metabase/metabase-enterprise-head:latest
 
 COPY ./metabase /app/
 COPY ./local-dist /app/local-dist
