--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
   },
   "scripts": {
     "docker:up": "docker compose --env-file .env.docker up",
-    "docker:down": "docker compose --env-file .env.docker down --rmi all --volumes",
+    "docker:e2e:up": "docker compose -f docker-compose.yml -f docker-compose.e2e.yml --env-file .env.docker up",
+    "docker:local-dist:up": "docker compose -f docker-compose.yml -f docker-compose.local-dist.yml --env-file .env.docker up",
+    "docker:down": "docker compose --env-file .env.docker down",
+    "docker:rm": "yarn docker:down --rmi all --volumes",
     "install-deps": "yarn --force",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "dev": "vite",
