--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.9",
     "express": "^4.19.2",
+    "http-proxy-middleware": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "node-fetch": "^2",
     "pg": "^8.11.5",
