--- a/vercel.json
+++ b/vercel.json
@@ -37,6 +37,10 @@
   ],
   "rewrites": [
     {
+      "source": "/api/sso/metabase",
+      "destination": "https://shoppy-sdk-auth.kelvin.workers.dev"
+    },
+    {
       "source": "/api/:path*",
       "destination": "/api/src/main"
     },
