Proxy through vercel rewrite instead of using its function

--- a/vercel.json
+++ b/vercel.json
@@ -46,7 +46,7 @@
     },
     {
       "source": "/mb/:path*",
-      "destination": "/api/src/main"
+      "destination": "https://shoppy.coredev.metabase.com"
     },
     {
       "source": "/(.*)",
