--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,7 @@
 {
+  "$schema": "https://openapi.vercel.sh/vercel.json",
   "version": 2,
+  "fluid": true,
   "git": {
     "deploymentEnabled": {
       "*": false,
