Handle MB_RUN_MODE and METASTORE_DEV_SERVER_URL env vars

--- a/.env.docker.example
+++ b/.env.docker.example
@@ -21,3 +21,7 @@ SHOPPY_DB_USER="shoppy"
 SHOPPY_DB_PASSWORD="foobarbaz"
 
 WATCH="false"
+
+# for development
+# MB_RUN_MODE="dev"
+# METASTORE_DEV_SERVER_URL=""
