--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,6 +72,8 @@ services:
       MB_EDITION: "ee"
       MB_SITE_URL: "http://localhost:${MB_PORT}/"
       MB_PREMIUM_EMBEDDING_TOKEN: "${PREMIUM_EMBEDDING_TOKEN}"
+      MB_RUN_MODE: "${MB_RUN_MODE}"
+      METASTORE_DEV_SERVER_URL: "${METASTORE_DEV_SERVER_URL}"
       MB_JWT_IDENTITY_PROVIDER_URI: "http://localhost:${API_PORT}/sso/metabase"
       MB_JWT_SHARED_SECRET: "${METABASE_JWT_SHARED_SECRET}"
       MB_SETUP_TOKEN: "${PREMIUM_EMBEDDING_TOKEN}"
