--- a/vercel.json
+++ b/vercel.json
@@ -39,11 +39,7 @@
       "headers": [
         {
           "key": "Cache-Control",
-          "value": "max-age=0, must-revalidate"
-        },
-        {
-          "key": "CDN-Cache-Control",
-          "value": "public, max-age=2592000"
+          "value": "max-age=0, s-maxage=2592000"
         }
       ]
     }
