Revert header test

--- a/vercel.json
+++ b/vercel.json
@@ -42,7 +42,7 @@
           "value": "max-age=0, must-revalidate"
         },
         {
-          "key": "Vercel-CDN-Cache-Control",
+          "key": "CDN-Cache-Control",
           "value": "public, max-age=2592000"
         }
       ]
