Store artifact on failure, reduce timeout

--- a/.github/workflows/synthetic-monitoring.yml
+++ b/.github/workflows/synthetic-monitoring.yml
@@ -19,5 +19,10 @@ jobs:
           browser: chrome
           config-file: support/cypress.synthetic.config.js
           config: userAgent=metabase-bot/1.0
-        env:
-          CYPRESS_BASE_URL: https://embedded-analytics-sdk-demo.metabase.com
+          env: BASE_URL=https://embedded-analytics-sdk-demo.metabase.com
+      - uses: actions/upload-artifact@v6
+        if: failure()
+        with:
+          name: cypress-screenshots
+          path: cypress/screenshots
+          if-no-files-found: ignore
