Update var names

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -114,11 +114,11 @@ services:
       args:
         VITE_APP_METABASE_INSTANCE_URL: "http://localhost:${MB_PORT}"
         VITE_APP_BACKEND_URL: "http://localhost:${API_PORT}"
-        VITE_DATADOG_APPLICATION_ID: "${VITE_DATADOG_APPLICATION_ID}"
-        VITE_DATADOG_CLIENT_TOKEN: "${VITE_DATADOG_CLIENT_TOKEN}"
-        VITE_DATADOG_SITE: "${VITE_DATADOG_SITE}"
-        VITE_DATADOG_SERVICE: "${VITE_DATADOG_SERVICE}"
-        VITE_DATADOG_ENV: "${VITE_DATADOG_ENV}"
+        VITE_DATADOG_APPLICATION_ID: "${DATADOG_APPLICATION_ID}"
+        VITE_DATADOG_CLIENT_TOKEN: "${DATADOG_CLIENT_TOKEN}"
+        VITE_DATADOG_SITE: "${DATADOG_SITE}"
+        VITE_DATADOG_SERVICE: "${DATADOG_SERVICE}"
+        VITE_DATADOG_ENV: "${DATADOG_ENV}"
         WATCH: "${WATCH}"
     environment:
       CLIENT_PORT: "${CLIENT_PORT}"
